# mcp-server-cookbook

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml
MEMORY/: core_decisions_ai.md  core_decisions_human.md  full_history_ai.md  full_history_human.md
docs/: architecture.md  demo_fixture.md  spec-version.md
servers/filesystem-sandbox/: README.md  package-lock.json  package.json  vitest.config.ts
servers/filesystem-sandbox-py/: .gitignore  README.md  pyproject.toml
servers/filesystem-sandbox-py/filesystem_sandbox/: __init__.py  atomic_write.py  config.py  sandbox.py  server.py  tools.py
servers/filesystem-sandbox-py/tests/: test_atomic_write.py  test_config.py  test_public_surface.py  test_sandbox.py  test_server_iserror.py  test_tools.py
servers/github-gists/: README.md  package-lock.json  package.json
servers/internal-tools-bridge/: README.md  package-lock.json  package.json
servers/postgres-readonly/: .env.example  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json
tools/: capture-demo.mjs  capture-demo.test.mjs  capture_demo.sh  check-architecture-doc.mjs  check-architecture-doc.test.mjs  check-capture-demo.mjs  check-capture-demo.test.mjs  check-claude-desktop-config.mjs  check-claude-desktop-config.test.mjs  check-readme.mjs  check-readme.test.mjs  check-spec-version.mjs  check-spec-version.test.mjs  check-workflow-concurrency.mjs  check-workflow-concurrency.test.mjs  check-workflow-timeout.mjs  check-workflow-timeout.test.mjs  check-workflow-yaml.mjs  check-workflow-yaml.test.mjs
(+34 files in other folders)
