[project]
name = "mcp-cookbook-filesystem-sandbox-py"
version = "0.1.0"
description = "Python parity port of the filesystem-sandbox MCP server. Same threat model, same security primitive, exposed via the official Python MCP SDK."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "JT McHorse" }]

# The security primitive (filesystem_sandbox.sandbox + tools) is
# dependency-free. The `[server]` extra adds the official MCP Python
# SDK (the same upstream the TS cookbook pins via
# `@modelcontextprotocol/sdk`), needed only when wiring the primitive
# into the MCP server boilerplate.
dependencies = []

[project.optional-dependencies]
server = ["mcp>=1.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.7"]

[project.scripts]
mcp-filesystem-sandbox-py = "filesystem_sandbox.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["filesystem_sandbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
